# Constant-Weight-Strings-in-Constant-Time-a-Building-Block-for-Code-based-Post-quantum-Cryptosystems

./: CMakeLists.txt  README.md  reproduce_paper_results.c
include/: bitstring_parameters.h  combinadics_library.h  constant_weight_codec.h  gf2x_limbs.h  rng.h  timing_and_stats.h
